<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/stopwatchChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/start"
            android:textSize="25sp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:text="@string/stop"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:layout_gravity="center_horizontal"
        android:id="@+id/resetButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/reset"
        android:textSize="25sp" />

</LinearLayout>